improving check if server is already started, inserting start server in the loginOk test

--- a/nuxeo-case-management-qa/src/test/resources/login/LoginOk.html
+++ b/nuxeo-case-management-qa/src/test/resources/login/LoginOk.html
@@ -15,7 +15,9 @@ test plan</a></p>
 <ul>
   <li>Having that
   <ul>
-    <li>The user Administrator is the default one (unchanged)</li>
+    <li><a
+  concordion:run="org.nuxeo.qa.behaviourdriven.NuxeoConcordionRunner"
+  href="../server/CaseManagementStart.html">The server is started</a></li>
   </ul>
   </li>
   <li>Testing login
