Create users test

--- a/nuxeo-case-management-qa/src/test/resources/NuxeoCaseManagementTestPlan.html
+++ b/nuxeo-case-management-qa/src/test/resources/NuxeoCaseManagementTestPlan.html
@@ -37,10 +37,10 @@ Nuxeo Case Management server installed and started</a></p>
     concordion:run="org.nuxeo.qa.behaviourdriven.NuxeoConcordionRunner"
     href="login/LoginOk.html">LoginOk.html</a> This is testing that the
   log in works</li>
-<!--  <li><a-->
-<!--    concordion:run="org.nuxeo.qa.behaviourdriven.NuxeoConcordionRunner"-->
-<!--    href="login/CreateUsers.html">CreateUsers.html</a> Create the users-->
-<!--  for the other tests if necessary</li>-->
+  <li><a
+    concordion:run="org.nuxeo.qa.behaviourdriven.NuxeoConcordionRunner"
+    href="login/CreateUsers.html">CreateUsers.html</a> Create the users
+  </li>
 </ol>
 
 <p><a
